유저간 채팅기능 구현(게시물 발행과 같음)

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/write">Write</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">login</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -42,6 +45,7 @@
         <div class="container input-group mb-2">
           <input class="form-control" id="search-input">&nbsp;
           <button id="search" class="input-group-append btn btn-danger"> 검색 </button>
+          
         </div>
 
 
@@ -67,7 +71,7 @@
           <p> 할일 마감날짜 : <%= posts[i].date %> </p>
           <p> 작성자_id : <%= posts[i].작성자 %> </p>
           <button type="button" class="delete btn btn-danger" data-id="<%= posts[i]._id %>">삭제</button> 
-          
+          <button type="button" class="chat btn btn-success" data-id="<%= posts[i].작성자 %>">채팅</button>
         </li>
         <% } %>
       </ul>
@@ -79,6 +83,7 @@
 
       <script>
         $('.delete').click(function(e){
+          
           var 글번호 = e.target.dataset.id
           var 지금누른거 = $(this)
           $.ajax({
@@ -95,6 +100,26 @@
           alert('오류')
         })
         })
+
+
+
+        $('.chat').click(function(e){
+          var 당한사람id = e.target.dataset.id;
+          $.ajax({
+            method : 'POST',
+            url : '/chatroom',
+            data : {
+              당한사람id : 당한사람id
+            }
+          }).done(function(결과){
+          console.log('성공')
+          
+        }).fail(function(){
+          console.log('실패')
+        })
+        })
+
+
 
         
       </script>
