--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -10,42 +10,65 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.rtl.min.css" integrity="sha384-PRrgQVJ8NNHGieOA1grGdCTIt4h21CzJs6SnWH4YMQ6G5F5+IEzOHz67L4SQaF0o" crossorigin="anonymous">
 
     <title>node.js</title>
+
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">todoApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/list">List</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/write">Write</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/login">login</a>
-            </li>
-          </ul>
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">todoApp</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/list">List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/write">Write</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">login</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
 
-<div class="container mt-3">
-  <div class="card" style="width: 100%">
-    <div class="card-body">
-      <h5 class="card-title"><%= 결과.title %></h5>
-      <h6 class="card-subtitle mb-2 text-muted"><%= 결과.date %></h6>
-      <p class="card-text">임시내용입니다.</p>
+      <div class="container p-4 detail">
+
+        <div class="row">
+          <div class="col-3">
+            <ul class="list-group chat-list">
+
+             <% for (var i = 0; i < data.length; i++){ %>
+              <li class="list-group-item" data-id="">
+                <h6><%= data[i].title %></h6>
+                <h6 class="text-small"><%= data[i].member[0]%>와의 채팅방</h6>
+              </li>
+            <% } %>
+              
+             </ul>
+           </div>
       
-      <a href=<%= "/edit/"+ 결과._id %> class="card-link">수정하기</a>
-    </div>
-  </div>
-</div>
+           <div class="col-9 p-0">
+             <div class="chat-room">
+                <ul class="list-group chat-content">
+                  <li><span class="chat-box">채팅방1 내용</span></li>
+                  <li><span class="chat-box">채팅방1 내용</span></li>
+                  <li><span class="chat-box mine">채팅방1 내용</span></li>
+                </ul>
+              <div class="input-group">
+                <input class="form-control" id="chat-input">
+                <button class="btn btn-secondary" id="send">전송</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+      </div> 
+
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
