--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -43,7 +43,7 @@
             <ul class="list-group chat-list">
 
              <% for (var i = 0; i < data.length; i++){ %>
-              <li class="list-group-item" data-id="">
+              <li class="list-group-item" data-id="<%= data[i]._id %>">
                 <h6><%= data[i].title %></h6>
                 <h6 class="text-small"><%= data[i].member[0]%>와의 채팅방</h6>
               </li>
@@ -70,24 +70,46 @@
       </div> 
 
 
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+      <script>
+
+        let 지금누른채팅방id
+        var eventSource;
+        $('.list-group-item').click(function(){
+          지금누른채팅방id = this.dataset.id
+          eventSource = new EventSource('/message'+지금누른채팅방id)
+          eventSource.addEventListener('test',(e)=>{
+            console.log(JSON.parse(e.data))//서버에서 보낸 데이터
+          })
+
+          console.log(지금누른채팅방id)
+        })
+
+
+        $('#send').click(function(){
+          $.ajax({
+            method : 'POST',
+            url : '/message',
+            data : {
+              parent : 지금누른채팅방id,
+              content : $('#chat-input').val()
+          }
+          }).then(()=>{
+            console.log('전송성공')
+          })
+        })
+
+
+      
+      </script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
-    </html>
+  </html>
 
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+ 
