--- a/forum/views/nav.ejs
+++ b/forum/views/nav.ejs
@@ -1,5 +1,5 @@
 <div class="nav">
     <a class="logo" href="/list">AppleForum</a>
-    <a href="/list">list</a>
+    <a href="/list/1">list</a>
     <a href="/write">write</a>
 </div>
