session로그인기능 구현, 마이페이지 제작

--- a/forum/views/nav.ejs
+++ b/forum/views/nav.ejs
@@ -1,5 +1,7 @@
 <div class="nav">
-    <a class="logo" href="/list">AppleForum</a>
+    <a class="logo" href="/list">한상결의 게시판</a>
     <a href="/list/1">list</a>
     <a href="/write">write</a>
+    <a href="/login">login</a>
+    <a href="/mypage">mypage</a>
 </div>
