aws 설정 및 게시판기능 예외처리

--- a/forum/views/detail.ejs
+++ b/forum/views/detail.ejs
@@ -12,7 +12,8 @@
     <%- include('nav.ejs') %>
     
     <div class="detail-bg">
-        <h4><%= result.title %></h4>
+        <p><%= result.writer %></p>
+        <h2><%= result.title %></h2>
         <p><%= result.content %></p>
         <br>
     </div>
