--- a/forum/views/nav.ejs
+++ b/forum/views/nav.ejs
@@ -3,5 +3,7 @@
     <a href="/list/1">list</a>
     <a href="/write">write</a>
     <a href="/login">login</a>
+    <a href="/logout">logout</a>
+    <a href="/register">register</a>
     <a href="/mypage">mypage</a>
 </div>
