--- a/forum/public/main.css
+++ b/forum/public/main.css
@@ -5,7 +5,6 @@ body{
     display : flex;
     padding : 15px;
     align-items: center;
-    background: white;
 }
 
 .nav a{
@@ -27,6 +26,7 @@ body{
   .list-box {
     padding : 10px;
     border-bottom: 1px solid#eee;
+    border-top: 1px solid#eee;
   }
   .list-box h4{
     font-size: 16px;
@@ -71,4 +71,23 @@ body{
   a{
     text-decoration: none;
     color: black;
+  }
+
+  .search-box {
+    padding : 0px 20px 20px 20px;
+    margin : 20px;
+    border-radius: 8px;
+  }
+  .search-box input {
+    padding : 10px;
+    font-size: 16px;
+    width: 82%;
+    border: 1px solid black;
+    border-radius: 5px;
+  }
+  .search-box button {
+    padding: 10px;
+    border : none;
+    background : lightgrey;
+    border-radius: 5px;
   }
