--- a/forum/views/nav.ejs
+++ b/forum/views/nav.ejs
@@ -1,9 +1,9 @@
 <div class="nav">
-    <a class="logo" href="/list">한상결의 게시판</a>
+    <a class="logo" href="/list">한상갤러리</a>
     <a href="/list/1">list</a>
-    <a href="/write">write</a>
+    <a href="/write">글쓰기</a>
     <a href="/login">login</a>
     <a href="/logout">logout</a>
-    <a href="/register">register</a>
+    <a href="/register">회원가입</a>
     <a href="/mypage">mypage</a>
 </div>
