--- a/forum/public/main.css
+++ b/forum/public/main.css
@@ -114,3 +114,21 @@ body{
   .reply{
     border-top: 2px solid #eee;
   }
+
+
+  .chat-screen{ width: 100%; }
+  .chat-box{ margin-top : 15px; display: flex; }
+  .chat-box span{ padding : 10px; background: #eee; }
+  .mine{ justify-content: end; }
+  .chat-input{
+    margin-top : 15px;
+    margin-left : 20px;
+    padding : 10px;
+    border-radius: 5px;
+  }
+  .chat-button{
+    padding : 10px;
+    border : none;
+    background: lightgray;
+    border-radius: 5px;
+  }
