--- a/forum/views/nav.ejs
+++ b/forum/views/nav.ejs
@@ -6,4 +6,5 @@
     <a href="/logout">logout</a>
     <a href="/register">회원가입</a>
     <a href="/mypage">mypage</a>
+    <a href="/chatlist">채팅방리스트</a>
 </div>
