--- a/forum/views/chatlist.ejs
+++ b/forum/views/chatlist.ejs
@@ -10,13 +10,13 @@
 
     <%- include('nav.ejs') %>
     
-    
+    <%= JSON.stringify(result) %>
     <div class="white-bg">
         <% for(let i = 0; i < result.length; i++){ %>
             <div class="list-box">
                 <h4>
                     <a href="/chat/detail<%= result[i]._id %>">
-                        채팅방 <%= i %>
+                        채팅방
                     </a>
                 </h4>
                 
