--- a/forum/views/edit.ejs
+++ b/forum/views/edit.ejs
@@ -25,7 +25,11 @@
                 <p>글 내용</p>
                 <input class="form-input" name="content" value="<%= result.content %>">
             </div>
-
+            <div class="w-100">
+                <p>이미지</p>
+                <img src="<%= result.img %>">
+            </div>
+            
             <div class="bottom-menu">
                 <button class="form-button" type="submit" style="cursor: pointer;">수정하기</button>
             </div>
