--- a/forum/public/main.css
+++ b/forum/public/main.css
@@ -6,7 +6,9 @@ a{
   text-decoration: none; 
   color: black;
 }
-
+img{
+  max-width: 100%;
+}
 
 
 
@@ -222,4 +224,13 @@ a {
 .card-list{
   box-shadow: 0px 0px 2px 1px rgb(41, 41, 41, 0.1);
   margin-top: 15px;
+}
+
+.re-reply{
+  display:none;
+}
+.re-reply-open{
+  font-size: 13px;
+  cursor: pointer;
+  opacity: 0.7;
 }
