--- a/forum/views/detail.ejs
+++ b/forum/views/detail.ejs
@@ -1,98 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href = '/main.css' rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href='/main.css' rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body class="grey-bg">
 
     <!-- nav bar -->
     <%- include('nav.ejs') %>
-    <%= result._id %>
-    <div class="container">
-    <div class="detail-bg">
-        
-        <strong><%= result.writer %></strong>
-        <div class="date-box">
-            <%= result.date.getFullYear() %>.<%= (result.date.getMonth() + 1).toString().padStart(2, '0') %>.<%= result.date.getDate().toString().padStart(2, '0') %>. <%= result.date.getHours().toString().padStart(2, '0') %>:<%= result.date.getMinutes().toString().padStart(2, '0') %>
-        </div>
-        <h2><%= result.title %></h2>
-        <p><%= result.content %></p>
-        
-        <img style="max-width: 100%;" src="<%= result.img %>">
-        <br><br>
-        <div class="like-box">
-            <div class="like-icon">
-                <i class="empty-heart fa-regular fa-heart" data-id="<%= result._id %>"></i>
-                <span class="like-count"><%= result.like %></span>
-            </div>
-        </div>
-        <a href="/chat/request?writer_id=<%=result.writer_id%>">채팅하기</a>
-    </div>
-    <i class="fa-solid fa-heart"></i>
-    
-    <div class="detail-bg">
-        <h4>댓글 작성</h4>
-        <form class="reply-box" action="/add_reply" method="POST">
-            <input name="parent_id" type="hidden" value="<%= result._id %>" >
-            <input name="reply_content">
-            <button type="submit" style="cursor: pointer;">작성</button>
-        </form>
+        <%= result._id %>
+            <div class="container">
+                <div class="detail-bg">
 
-        
-            <% for(let i = 0; i < result2.length; i++) { %>
-                <div class="reply">
-                    <h4><%= result2[i].writer_name %></h4>
-                    <p><%= result2[i].content %></p>
+                    <strong>
+                        <%= result.writer %>
+                    </strong>
                     <div class="date-box">
-                        <%= result2[i].date.getFullYear() %>.<%= (result2[i].date.getMonth() + 1).toString().padStart(2, '0') %>.<%= result2[i].date.getDate().toString().padStart(2, '0') %>. <%= result2[i].date.getHours().toString().padStart(2, '0') %>:<%= result2[i].date.getMinutes().toString().padStart(2, '0') %>
+                        <%= result.date.getFullYear() %>.<%= (result.date.getMonth() + 1).toString().padStart(2, '0' )
+                                %>.<%= result.date.getDate().toString().padStart(2, '0' ) %>. <%=
+                                        result.date.getHours().toString().padStart(2, '0' ) %>:<%=
+                                            result.date.getMinutes().toString().padStart(2, '0' ) %>
                     </div>
+                    <h2>
+                        <%= result.title %>
+                    </h2>
+                    <p>
+                        <%= result.content %>
+                    </p>
+
+                    <img style="max-width: 100%;" src="<%= result.img %>">
+                    <br><br>
+                    <div class="like-box">
+                        <div class="like-icon">
+                            <i class="empty-heart fa-regular fa-heart" data-id="<%= result._id %>"></i>
+                            <span class="like-count">
+                                <%= result.like %>
+                            </span>
+                        </div>
+                    </div>
+                    <a href="/chat/request?writer_id=<%=result.writer_id%>">채팅하기</a>
                 </div>
-            <% } %>
-        
-        
-    </div>
-    
+                <i class="fa-solid fa-heart"></i>
 
-    <script>
-        
+                <div class="detail-bg">
+                    <h4>댓글 작성</h4>
 
-        document.querySelector('.empty-heart').addEventListener('click', function (e) {
-    fetch('/like?_id=' + e.target.dataset.id, {
-        method: 'POST' 
-    })
-    .then(r => {
-        if (r.status === 200) {
-            console.log('Success:', r.status);
-            return r.text();
-        } else if (r.status === 401 || r.status === 403) {
-            // User is not authenticated
-            window.location.href = '/login';
-            return;
-        } else {
-            // Handle other errors
-            console.error('Server error:', r.status);
-            return;
-        }
-    })
-    .then(result => {
-        if (result) {
-            console.log(result);
-            let likeC = document.querySelector('.like-count').innerHTML;
-            likeC = parseInt(likeC);
-            document.querySelector('.like-count').innerHTML = likeC + 1;
-        }
-    })
-    .catch(error => {
-        console.error('Fetch error:', error);
-    });
-});
-        
-    </script>
-</div>
+
+                    <form action="/add_reply" method="POST">
+                        <div class="input-group mb-3">
+                            <input name="reply_content" class="form-control">
+                            <input name="parent_id" type="hidden" value="<%= result._id %>">
+                            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">작성</button>
+                        </div>
+                    </form>
+
+
+                    <% for(let i=0; i < result2.length; i++) { %>
+                        <div class="reply">
+                            <h6 style="display: flex;">
+                                <%= result2[i].writer_name %> <div style="flex-grow : 1"></div> <div class="re-reply-open">답글</div>
+                            </h6>
+                            <p>
+                                <%= result2[i].content %>
+                            </p>
+                            <div class="date-box">
+                                <%= result2[i].date.getFullYear() %>.<%= (result2[i].date.getMonth() +
+                                        1).toString().padStart(2, '0' ) %>.<%=
+                                            result2[i].date.getDate().toString().padStart(2, '0' ) %>. <%=
+                                                result2[i].date.getHours().toString().padStart(2, '0' ) %>:<%=
+                                                    result2[i].date.getMinutes().toString().padStart(2, '0' ) %>
+                            </div>
+
+                            <form class="re-reply" action="/add_reply" method="POST">
+                                <div class="input-group mb-3">
+                                    <input name="reply_content" class="form-control">
+                                    <input name="parent_id" type="hidden" value="<%= result._id %>">
+                                    <button class="btn btn-outline-secondary" type="submit"
+                                        id="button-addon2">작성</button>
+                                </div>
+                            </form>
+                        </div>
+                        <% } %>
+
+
+                </div>
+
+
+                <script>
+                    var buttons = document.querySelectorAll('.re-reply-open');
+
+                    var replies = document.querySelectorAll('.re-reply');
+
+                    buttons.forEach(function (button, index) {
+                        button.addEventListener('click', function () {
+                            var reReply = replies[index];
+
+                            if (reReply.style.display === 'flex') {
+                                reReply.style.display = 'none';
+                            } else {
+                                reReply.style.display = 'flex';
+                            }
+                        });
+                    });
+
+
+
+                    document.querySelector('.empty-heart').addEventListener('click', function (e) {
+                        fetch('/like?_id=' + e.target.dataset.id, {
+                            method: 'POST'
+                        })
+                            .then(r => {
+                                if (r.status === 200) {
+                                    console.log('Success:', r.status);
+                                    return r.text();
+                                } else if (r.status === 401 || r.status === 403) {
+                                    // User is not authenticated
+                                    window.location.href = '/login';
+                                    return;
+                                } else {
+                                    // Handle other errors
+                                    console.error('Server error:', r.status);
+                                    return;
+                                }
+                            })
+                            .then(result => {
+                                if (result) {
+                                    console.log(result);
+                                    let likeC = document.querySelector('.like-count').innerHTML;
+                                    likeC = parseInt(likeC);
+                                    document.querySelector('.like-count').innerHTML = likeC + 1;
+                                }
+                            })
+                            .catch(error => {
+                                console.error('Fetch error:', error);
+                            });
+                    });
+
+                </script>
+            </div>
 </body>
 
 </html>
