--- a/forum/views/edit.ejs
+++ b/forum/views/edit.ejs
@@ -23,7 +23,7 @@
             </div>
             <div class="w-100">
                 <p>글 내용</p>
-                <input class="form-input" name="content" value="<%= result.content %>">
+                <textarea class="form-input form-input-content" name="content" value="<%= result.content %>"></textarea>
             </div>
             <div class="w-100">
                 <p>이미지</p>
