--- a/forum/views/write.ejs
+++ b/forum/views/write.ejs
@@ -24,7 +24,7 @@
             </div>
             <div class="w-100">
                 <p>글 내용</p>
-                <input type="" class="form-input" name="content">
+                <textarea type="textarea" class="form-input form-input-content" name="content"></textarea>
             </div>
             <div class="w-100">
                 <p>사진 첨부</p>
