--- a/forum/views/detail.ejs
+++ b/forum/views/detail.ejs
@@ -47,7 +47,7 @@
                             </span>
                         </div>
                     </div>
-                    <a href="/chat/request?writer_id=<%=result.writer_id%>">채팅하기</a>
+                    <a class="none-a" href="/chat/request?writer_id=<%=result.writer_id%>">채팅하기</a>
                 </div>
                 <i class="fa-solid fa-heart"></i>
 
@@ -64,10 +64,14 @@
                     </form>
 
 
+
+
                     <% for(let i=0; i < result2.length; i++) { %>
                         <div class="reply">
                             <h6 style="display: flex;">
-                                <%= result2[i].writer_name %> <div style="flex-grow : 1"></div> <div class="re-reply-open">답글</div>
+                                <%= result2[i].writer_name %>
+                                    <div style="flex-grow : 1"></div>
+                                    <div class="re-reply-open">답글</div>
                             </h6>
                             <p>
                                 <%= result2[i].content %>
@@ -80,73 +84,101 @@
                                                     result2[i].date.getMinutes().toString().padStart(2, '0' ) %>
                             </div>
 
-                            <form class="re-reply" action="/add_reply" method="POST">
-                                <div class="input-group mb-3">
-                                    <input name="reply_content" class="form-control">
-                                    <input name="parent_id" type="hidden" value="<%= result._id %>">
-                                    <button class="btn btn-outline-secondary" type="submit"
-                                        id="button-addon2">작성</button>
-                                </div>
-                            </form>
+
+                            <!-- 대댓글 표시 -->
+                            <% result3.forEach(function(reply) { %>
+                                <% if(reply.parent_id.toString()===result2[i]._id.toString()) { %>
+                                    <div class="re-reply-content">
+                                        <h6>
+                                            <%= reply.writer_name %>
+                                        </h6>
+                                        <p>
+                                            <%= reply.content %>
+                                        </p>
+                                        <div class="date-box">
+                                            <%= reply.date.getFullYear() %>.<%= (reply.date.getMonth() +
+                                                    1).toString().padStart(2, '0' ) %>.<%=
+                                                        reply.date.getDate().toString().padStart(2, '0' ) %>. <%=
+                                                            reply.date.getHours().toString().padStart(2, '0' ) %>:<%=
+                                                                reply.date.getMinutes().toString().padStart(2, '0' ) %>
+                                        </div>
+                                    </div>
+                                    <% } %>
+                                        <% }); %>
+
+                                            <form class="re-reply" action="/add_re_reply" method="POST">
+                                                <div class="input-group mb-3">
+                                                    <input name="re_reply_content" class="form-control">
+                                                    <input name="parent_id" type="hidden" value="<%= result2[i]._id %>">
+                                                    <button class="btn btn-outline-secondary" type="submit"
+                                                        id="button-addon2">작성</button>
+                                                </div>
+                                            </form>
                         </div>
                         <% } %>
+
+
 
 
                 </div>
 
 
-                <script>
-                    var buttons = document.querySelectorAll('.re-reply-open');
+                    <script>
+                        var buttons = document.querySelectorAll('.re-reply-open');
 
-                    var replies = document.querySelectorAll('.re-reply');
+                        var replies = document.querySelectorAll('.re-reply');
 
-                    buttons.forEach(function (button, index) {
-                        button.addEventListener('click', function () {
-                            var reReply = replies[index];
+                        buttons.forEach(function (button, index) {
+                            button.addEventListener('click', function () {
+                                var reReply = replies[index];
 
-                            if (reReply.style.display === 'flex') {
-                                reReply.style.display = 'none';
-                            } else {
-                                reReply.style.display = 'flex';
-                            }
-                        });
-                    });
-
-
-
-                    document.querySelector('.empty-heart').addEventListener('click', function (e) {
-                        fetch('/like?_id=' + e.target.dataset.id, {
-                            method: 'POST'
-                        })
-                            .then(r => {
-                                if (r.status === 200) {
-                                    console.log('Success:', r.status);
-                                    return r.text();
-                                } else if (r.status === 401 || r.status === 403) {
-                                    // User is not authenticated
-                                    window.location.href = '/login';
-                                    return;
+                                if (reReply.style.display === 'flex') {
+                                    reReply.style.display = 'none';
                                 } else {
-                                    // Handle other errors
-                                    console.error('Server error:', r.status);
-                                    return;
+                                    reReply.style.display = 'flex';
                                 }
-                            })
-                            .then(result => {
-                                if (result) {
-                                    console.log(result);
-                                    let likeC = document.querySelector('.like-count').innerHTML;
-                                    likeC = parseInt(likeC);
-                                    document.querySelector('.like-count').innerHTML = likeC + 1;
-                                }
-                            })
-                            .catch(error => {
-                                console.error('Fetch error:', error);
                             });
-                    });
+                        });
 
-                </script>
+
+
+                        document.querySelector('.empty-heart').addEventListener('click', function (e) {
+                            fetch('/like?_id=' + e.target.dataset.id, {
+                                method: 'POST'
+                            })
+                                .then(r => {
+                                    if (r.status === 200) {
+                                        console.log('Success:', r.status);
+                                        return r.text();
+                                    } else if (r.status === 401 || r.status === 403) {
+                                        // User is not authenticated
+                                        window.location.href = '/login';
+                                        return;
+                                    } else {
+                                        // Handle other errors
+                                        console.error('Server error:', r.status);
+                                        return;
+                                    }
+                                })
+                                .then(result => {
+                                    if (result) {
+                                        console.log(result);
+                                        let likeC = document.querySelector('.like-count').innerHTML;
+                                        likeC = parseInt(likeC);
+                                        document.querySelector('.like-count').innerHTML = likeC + 1;
+                                    }
+                                })
+                                .catch(error => {
+                                    console.error('Fetch error:', error);
+                                });
+                        });
+
+                    </script>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
 </body>
 
 </html>
