--- a/forum/views/list.ejs
+++ b/forum/views/list.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 </head>
 
 <body class="grey-bg">
@@ -30,17 +31,21 @@
                     <div class="col-md-6  col-xl-3">
                         <div class="card card-list">
                             <div style="height: 250px;">
-                                <img src="<%= 글목록[i].img %>" class="card-img-top" style="object-fit: cover; height: 250px;">
+                                <img src="<%= 글목록[i].img %>" class="card-img-top"
+                                    style="object-fit: cover; height: 250px;">
                             </div>
                             <div class="card-body">
-                                
-                              <h5 class="card-title">
-                                <a href="/detail/<%= 글목록[i]._id %>">
-                                    <%= 글목록[i].title %>
-                                </a>
-                              </h5>
-                              <p class="card-text"><%= 글목록[i].content.length> 80 ? 글목록[i].content.slice(0, 300) + '...' : 글목록[i].content
-                                %></p>
+
+                                <h5 class="card-title">
+                                    <a href="/detail/<%= 글목록[i]._id %>">
+                                        <%= 글목록[i].title %>
+                                    </a>
+                                </h5>
+                                <p class="card-text">
+                                    <%= 글목록[i].content.length> 80 ? 글목록[i].content.slice(0, 300) + '...' :
+                                        글목록[i].content
+                                        %>
+                                </p>
                                 <p>
                                     글쓴이 : <%= 글목록[i].writer %>
                                 </p>
@@ -48,28 +53,28 @@
                                 <a href="/edit/<%= 글목록[i]._id %>"> ✏️ </a>
                                 <span class="delete" data-id="<%= 글목록[i]._id %>">🗑️</span>
                             </div>
-                          </div>
+                        </div>
                     </div>
                     <% } %>
 
                         <div class="prev-next">
-                            <a href="/list/prev/<%= 글목록[0]._id %>">이전</a>
-                            <a href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
+                            <a class="none-a" href="/list/prev/<%= 글목록[0]._id %>">이전</a>
+                            <a class="none-a" href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
                         </div>
 
             </div>
         </div>
         <script>
-            window.onload = function() {
-              var images = document.querySelectorAll('img');
-            
-              images.forEach(function(img) {
-                if(!img.getAttribute('src') || img.getAttribute('src').trim() === '') {
-                  img.parentNode.removeChild(img);
-                }
-              });
+            window.onload = function () {
+                var images = document.querySelectorAll('img');
+
+                images.forEach(function (img) {
+                    if (!img.getAttribute('src') || img.getAttribute('src').trim() === '') {
+                        img.parentNode.removeChild(img);
+                    }
+                });
             };
-            </script>
+        </script>
 
         <script>
 
@@ -116,7 +121,7 @@
             // })
 
 
-        'https://www.google.com/url?sa=i&url=https%3A%2F%2Fblog.naver.com%2Fosy2201%2F221220725720%3FviewType%3Dpc&psig=AOvVaw33EU3221IjwaSCWarq14jm&ust=1706335182670000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNDcsoaw-oMDFQAAAAAdAAAAABAD'
+            'https://www.google.com/url?sa=i&url=https%3A%2F%2Fblog.naver.com%2Fosy2201%2F221220725720%3FviewType%3Dpc&psig=AOvVaw33EU3221IjwaSCWarq14jm&ust=1706335182670000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNDcsoaw-oMDFQAAAAAdAAAAABAD'
 
         </script>
         <!-- 서버로 데이터보내는 다른 방법 : 
