--- a/forum/views/register.ejs
+++ b/forum/views/register.ejs
@@ -8,7 +8,7 @@
 </head>
 <body class="grey-bg">
 
-    <%- include('nav.ejs') %>
+    <%- include('nav.ejs',{user : user}) %>
 
     <!-- 서버에 포스트 요청 날리는 형식 -->
     
