--- a/forum/views/list.ejs
+++ b/forum/views/list.ejs
@@ -11,15 +11,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
 </head>
 
 <body class="grey-bg">
-    <%- include('nav.ejs') %>
-
+    <%- include('nav.ejs', {user : user}) %>
 
         <div class="container">
             <h3 style="padding-top: 20px;">커뮤니티 게시판</h3>
+
+            
+
             <form class="d-flex" action="/search" method="POST">
                 <input class="search-input" name="search_words" placeholder="Search">
                 <button class="btn search-btn" type="submit">
@@ -29,7 +31,7 @@
             <div class="row">
                 <% for(let i=0; i < 글목록.length; i++){ %>
                     <div class="col-md-6  col-xl-3">
-                        <div class="card card-list">
+                        <div class="card shadow card-list">
                             <div style="height: 250px;">
                                 <img src="<%= 글목록[i].img %>" class="card-img-top"
                                     style="object-fit: cover; height: 250px;">
@@ -42,7 +44,7 @@
                                     </a>
                                 </h5>
                                 <p class="card-text">
-                                    <%= 글목록[i].content.length> 80 ? 글목록[i].content.slice(0, 300) + '...' :
+                                    <%= 글목록[i].content.length> 28 ? 글목록[i].content.slice(0, 28) + '...' :
                                         글목록[i].content
                                         %>
                                 </p>
