--- a/forum/views/search.ejs
+++ b/forum/views/search.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body class="grey-bg">
-    <%- include('nav.ejs') %>
+    <%- include('nav.ejs',{user : user}) %>
 
 
         <div class="container">
