--- a/forum/views/mypage.ejs
+++ b/forum/views/mypage.ejs
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href = '/main.css' rel="stylesheet">
+    <link href='/main.css' rel="stylesheet">
 </head>
+
 <body class="grey-bg">
 
     <%- include('nav.ejs', {user: user}) %>
 
-    <div class="form-bg">
+        <div class="form-bg">
 
-        
-    <div class="form-white" >
-        <h3>마이페이지</h3>
-        
 
-        <div class="d-flex align-items-center">
-            <div class="flex-shrink-0">
-                <div style="width: 100px; height: 100px; border-radius: 50%; background: black;">
-                    <img src="증명사진.jpg" alt="...">
+            <div class="form-white">
+                <h2>마이페이지</h2>
+
+                <div class="row"> 
+                <div class="col-md-6">
+                    <div class="d-flex align-items-center">
+                        <div class="flex-shrink-0">
+                            <div style="width: 100px; height: 100px; border-radius: 50%; background: black;">
+                                <img src="증명사진.jpg" alt="...">
+                            </div>
+
+                        </div>
+                        <div class="flex-grow-1 ms-3">
+                            <h3>이름 : <%= user.username %>
+                            </h3>
+                            <p>주소 : <%= user.address %> </p>
+                            <button type="button" class="btn btn-secondary">instagram</button>
+                        </div>
+                    </div>
                 </div>
-              
+                <div class="col-md-6 mt-3">
+                    <h4>자기소개</h4>
+                    <p><%= user.introduce %></p>
+                </div>
             </div>
-            <div class="flex-grow-1 ms-3">
-                <h3>유저명 : <%= user.username %></h3>
-                <p> 경기 성남시 </p>
-                <button type="button" class="btn btn-secondary">instagram</button>
             </div>
-            <div class="flex-grow-1 ms-3">
-            </div>
-          </div>
-    </div>
-    
-</div>
+
+        </div>
 
 </body>
+
 </html>
-
-
