--- a/forum/views/nav.ejs
+++ b/forum/views/nav.ejs
@@ -19,7 +19,9 @@
 
     <nav class="navbar navbar-expand-lg shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/list/1">한상갤</a>
+            <a class="navbar-brand" href="/list/1">
+                한상갤
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
